+ Fixed z-index

--- a/src/angular-popover.css
+++ b/src/angular-popover.css
@@ -2,7 +2,8 @@
 	position: absolute;
 	width: 0;
 	height: 0;
-	left: 0
+	left: 0;
+	z-index: 10000 !important;
 }
 
 .angular-popover {
